# autoresearch-small

./: .gitignore  LICENSE  README.md  prepare.py  program.md  pyproject.toml  results.tsv  train.py
docs/superpowers/plans/: 2026-03-10-autoresearch-local.md
docs/superpowers/specs/: 2026-03-10-autoresearch-local-design.md
