[project]
name = "autoresearch-small"
version = "1.0.0"
description = "Autonomous ML experiment loop with Claude Code on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.7",
    "pandas>=2.0",
]
